# easy-feed

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  easy-feed.cabal
Text/Feed/: Atom.hs  RSS.hs
templates/: atom.mustache  atomCategory.mustache  rss.mustache
tests/Text/Feed/: AtomSpec.hs  RSSSpec.hs
